# afwm

./: .gitignore  Cargo.toml  Makefile  README.md  build
src/: config.rs  cursor.rs  desktop.rs  event.rs  helper.rs  log.rs  main.rs  screen.rs  windows.rs  wm.rs  workspace.rs  x.rs  xconn.rs
src/layout/: floating.rs  mod.rs  tiling.rs
