[package]
name = "afwm"
version = "0.1.0"
authors = ["kim (grufwub) <grufwub@gmail.com>"]
edition = "2018"

[profile.release]
panic = "abort"

[[bin]]
name = "afwm"

[dependencies]
signal-hook = "0.1"
xcb = "0.9"
xcb-util = { version = "0.3", features = ["keysyms" ]}
x11 = "2.18"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
outlog = { version = "0.1", features = ["panic"] }
